--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<span class="image avatar"><img src="images/JielinQiu.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Jielin Qiu</a></h1>
 					<p>Graduate student in <br />Computer Science Department, SCS, <br />Carnegie Mellon University<br />
-					Pittsburgh, PA, USA <br />Email: jielinq@andrew.cmu.edu<br /><a href="https://drive.google.com/open?id=1h59dQQe5lT-NbmA9VbRoZyaqsf3iQ7vC">[CV]</a></p>
+					Pittsburgh, PA, USA <br />Email: jielinq@andrew.cmu.edu<br /></p>
 				</header>
 				<nav id="nav">
 					<ul>
