--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<header>
 					<span class="image avatar"><img src="images/JielinQiu.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Jielin Qiu</a></h1>
-					<p>Graduate student in <br />Computer Science Department, SCS, <br />Carnegie Mellon University<br />
-					Pittsburgh, PA, USA <br />Email: jielinq@andrew.cmu.edu<br /></p>
+					<p>Graduate student <br />Computer Science Department, SCS <br />Carnegie Mellon University<br />
+					Pittsburgh, PA, USA <br />Email: jielinq@andrew.cmu.edu</p>
 				</header>
 				<nav id="nav">
 					<ul>
