--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<p>Jielin Qiu<br />
 										</p>
 									</header>
-									<p>I am a graduate student at Computer Science Department at School of Computer Science, Carnegie Mellon University. I got my bachelor degree from Shanghai Jiao Tong University. During my undergraduate study, I joined  <a href="http://bcmi.sjtu.edu.cn">Center for Brain Like Computing and Machine Intelligence</a> as a research assistant, advised by <a href="http://bcmi.sjtu.edu.cn/home/blu/">Prof. Baoliang Lu</a>. I also worked as a research assistant at Carnegie Mellon University, Computer Science Department, with <a href="http://www.cnbc.cmu.edu/~tai/">Prof. Tai-Sing Lee</a>. My research interests lie in the general area of machine learning, as well as its applications in human-robot interaction, vision, and healthcare.</p>
+									<p>I am a graduate student at Computer Science Department at School of Computer Science, Carnegie Mellon University. I got my bachelor degree from Shanghai Jiao Tong University. During my undergraduate study, I joined  <a href="http://bcmi.sjtu.edu.cn">Center for Brain Like Computing and Machine Intelligence</a> as a research assistant, advised by <a href="http://bcmi.sjtu.edu.cn/home/blu/">Prof. Baoliang Lu</a>. I also worked as a research assistant at Carnegie Mellon University, Computer Science Department, with <a href="http://www.cnbc.cmu.edu/~tai/">Prof. Tai-Sing Lee</a>. My research interests lie in the general area of machine learning, as well as its applications in vision, robots, and healthcare.</p>
 								</div>
 							</section>
 
