--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 								<div class="container">
 									<h3>News</h3>
 									<ul class="feature-icons">
+									    <p >Sep 9, 2019.  Our paper got acceptde by NIPS 2019.</p>									
 									    <p >July 7, 2019.  I graduated from Shanghai Jiao Tong University with my bachelor degree and honored as Shanghai Outstanding Graduate.</p>
 										<p >Dec 18, 2018.  I was invited to join the Program Committee of <a href="http://www.aiai2019.eu/">15th AIAI </a> and <a href="http://www.eann2019.eu/">20th EANN</a> joint conference in Greece, 2019.</p>
 										<p >Nov 29, 2018.  A paper titled “Adversarial and Cooperative Correlated Domain Adaptation based Multimodal Emotion Recognition” was accepted by <a href="https://aaai.org/Conferences/AAAI-18/">AAAI-2018</a>.</p>
@@ -91,8 +92,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/NPN.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>A Neurally-Inspired Hierarchical Prediction Network for Spatiotemporal Sequence Learning and Prediction</h4>
-												<p>Under review of 36th International Conference on Machine Learning (<strong>ICML 2019</strong>)<a href="https://drive.google.com/open?id=1sGVsEuKcdrPmroTsszZBhzL0LcGA6Lp6">[Paper]</a></p>
+												<h4>Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex</h4>
+												<p>Under review of thirty-third Conference on Neural Information Processing Systems (<strong>NIPS 2019</strong>)<a href="https://drive.google.com/open?id=1sGVsEuKcdrPmroTsszZBhzL0LcGA6Lp6">[Paper]</a></p>
 												<p><strong>Jielin Qiu</strong>, Ge Huang, and Tai Sing Lee.<br>
 												Develope a hierarchical network model, neurally inspired and constrained, to understand how spatiotemporal memories might be learned and encoded in the visual hierarchy that can be used for predicting future episodic events.
 												We showed that this neurally inspired and constrained model achieve better prediction performance in real world videos and exhibited video familiarity or prediction suppression effects observed along the ventral stream of the primate visual system.</p>
