--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<div class="container">
 									<h3>News</h3>
 									<ul class="feature-icons">
-									    <p >Sep 9, 2019.  Our paper got acceptde by NIPS 2019.</p>									
+									    <p >Sep 9, 2019.  Our paper titled 'Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex' got acceptde by NIPS 2019.</p>									
 									    <p >July 7, 2019.  I graduated from Shanghai Jiao Tong University with my bachelor degree and honored as Shanghai Outstanding Graduate.</p>
 										<p >Dec 18, 2018.  I was invited to join the Program Committee of <a href="http://www.aiai2019.eu/">15th AIAI </a> and <a href="http://www.eann2019.eu/">20th EANN</a> joint conference in Greece, 2019.</p>
 										<p >Nov 29, 2018.  A paper titled “Adversarial and Cooperative Correlated Domain Adaptation based Multimodal Emotion Recognition” was accepted by <a href="https://aaai.org/Conferences/AAAI-18/">AAAI-2018</a>.</p>
