--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<h3>About Me</h3>
 										</p>
 									</header>
-									<p>I am a PhD student at Computer Science Department at School of Computer Science, Carnegie Mellon University, advised by <a href="https://safeai-lab.github.io/index.html">Prof. Ding Zhao</a>. I also worked with <a href="https://www.cs.cmu.edu/~schneide/">Prof. Jeff Schneider</a>. I got my bachelor degree from Shanghai Jiao Tong University. During my undergraduate study, I joined  <a href="http://bcmi.sjtu.edu.cn">Center for Brain Like Computing and Machine Intelligence</a> as a research assistant, advised by <a href="http://bcmi.sjtu.edu.cn/home/blu/">Prof. Baoliang Lu</a>. I also worked as a research assistant at Carnegie Mellon University, Computer Science Department, with <a href="http://www.cnbc.cmu.edu/~tai/">Prof. Tai-Sing Lee</a>. My research interests lie in Multimodal Machine Learning, Computer Vision, Robotics, Language Grounding, and Healthcare.</p>
+									<p>I am a PhD student at Computer Science Department at School of Computer Science, Carnegie Mellon University, advised by <a href="https://safeai-lab.github.io/index.html">Prof. Ding Zhao</a>. I also worked with <a href="https://www.cs.cmu.edu/~schneide/">Prof. Jeff Schneider</a>. I got my bachelor degree from Shanghai Jiao Tong University,advised by <a href="http://bcmi.sjtu.edu.cn/home/blu/">Prof. Baoliang Lu</a>. I also worked as a research assistant at Carnegie Mellon University, Computer Science Department, with <a href="http://www.cnbc.cmu.edu/~tai/">Prof. Tai-Sing Lee</a>. My research interests lie in Multimodal Machine Learning, Computer Vision, Robotics, Language Grounding, and Healthcare.</p>
 								</div>
 							</section>
 
