--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Publications</h3>
+									<h3>Selected Publications</h3>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/NPN.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex</h4>
-												<p>Under review of thirty-third Conference on Neural Information Processing Systems (<strong>NIPS 2019</strong>)<a href="https://drive.google.com/open?id=1sGVsEuKcdrPmroTsszZBhzL0LcGA6Lp6">[Paper]</a></p>
+												<p>Proc. of thirty-third Conference on Neural Information Processing Systems (<strong>NIPS 2019</strong>)<a href="https://drive.google.com/open?id=1sGVsEuKcdrPmroTsszZBhzL0LcGA6Lp6">[Paper]</a></p>
 												<p><strong>Jielin Qiu</strong>, Ge Huang, and Tai Sing Lee.<br>
 												Develope a hierarchical network model, neurally inspired and constrained, to understand how spatiotemporal memories might be learned and encoded in the visual hierarchy that can be used for predicting future episodic events.
 												We showed that this neurally inspired and constrained model achieve better prediction performance in real world videos and exhibited video familiarity or prediction suppression effects observed along the ventral stream of the primate visual system.</p>
@@ -110,6 +110,7 @@
 												Use deep network to extract features with high correlations and acquire high emotion classification accuracy. </p>
 											</div>
 										</article>
+										<!--
 										<article>
 											<a href="#" class="image"><img src="images/BIBM.png" alt="" /></a>
 											<div class="inner">
@@ -119,6 +120,7 @@
 												Correlated Attention Network (CAN) is an extension of attention based recurrent neural network with correlation calculated of different gated recurrent units to take attention mechanism into EEG and eye movement extracted features and takes advantage of coordinated representation with complementary features.</p>
 											</div>
 										</article>
+										-->
 										<article>
 											<a href="#" class="image"><img src="images/BI.jpg" alt="" /></a>
 											<div class="inner">
@@ -143,7 +145,7 @@
 											<a href="#" class="image"><img src="images/NER.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Sex Differences in Classification of Five Emotional States from EEG and Eye Movement Signals</h4>
-												<p>Under review of 9th International IEEE EMBS Conference on Neural Engineering (<strong>NER 2019</strong>)<a href="https://drive.google.com/open?id=19WKZKJhd0u-N5CzGbw7mGI0JdHUmdhzd">[Paper]</a></p>
+												<p>Proc. of 9th International IEEE EMBS Conference on Neural Engineering (<strong>NER 2019</strong>)<a href="https://drive.google.com/open?id=19WKZKJhd0u-N5CzGbw7mGI0JdHUmdhzd">[Paper]</a></p>
 												<p>Baolan Qing, <strong>Jielin Qiu</strong>, Hao Tang, Weilong Zheng, and Bao-Liang Lu.<br>
 												Propose five emotion dataset with EEG and eye movement data (<a href="http://bcmi.sjtu.edu.cn/home/seed/index.html ">Dataset</a>).
 												Investigate the differences between males and females in emotion recognition using DCCA and LSTM computational models, blink frequency, and blink duration.</p>
@@ -153,8 +155,8 @@
 											<a href="#" class="image"><img src="images/DQN.png" alt="" /></a>
 											<div class="inner">
 												<h4>Stochastic Variance Reduction for Deep Q-learning</h4>
-												<p>Under review of 31th AAAI Conference on Artificial Intelligence workshop (<strong>AAAI 2019</strong>)<a href="https://drive.google.com/open?id=1wsVhH3rQ7SvlPGr6mJ2ViovjRY0bjmjK">[Paper]</a></p>
-												<p>Weiye Zhao, and <strong>Jielin Qiu</strong>.<br>
+												<p>Proc. of of 31th AAAI Conference on Artificial Intelligence workshop (<strong>AAAI 2019</strong>)<a href="https://drive.google.com/open?id=1wsVhH3rQ7SvlPGr6mJ2ViovjRY0bjmjK">[Paper]</a></p>
+												<p>Wei-Ye Zhao, Yang Liu, Xiaoming Zhao, <strong>Jielin Qiu</strong>, and Jian Peng.<br>
 												Propose an innovative optimization algorithm for Q-learning which reduces the variance in gradient estimation.</p>
 											</div>
 										</article>
