--- a/index.html
+++ b/index.html
@@ -93,18 +93,28 @@
 										<article>
 											<a href="#" class="image"><img src="images/NPN.jpg" alt="" /></a>
 											<div class="inner">
+												<h4>Comparing Recognition Performance and Robustness of Multimodal Deep Learning Models for Multimodal Emotion Recognition</h4>
+												<p>Proc. of IEEE Transactions on Cognitive and Developmental Systems 2021<a href="https://ieeexplore.ieee.org/abstract/document/9395500">[PDF]</a></p>
+												<p><strong>Jielin Qiu</strong>, Ge Huang, and Tai Sing Lee.<br>
+												Propose two methods for extending the original DCCA model for multimodal fusion: weighted sum fusion and attention-based fusion.
+												Systemically compare the performance of DCCA, BDAE, and traditional approaches on five multimodal datasets.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/NPN.jpg" alt="" /></a>
+											<div class="inner">
 												<h4>Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex</h4>
-												<p>Proc. of thirty-third Conference on Neural Information Processing Systems (<strong>NIPS 2019</strong>)<a href="https://drive.google.com/open?id=1sGVsEuKcdrPmroTsszZBhzL0LcGA6Lp6">[Paper]</a></p>
+												<p>Proc. of thirty-third Conference on Neural Information Processing Systems (<strong>NIPS 2019</strong>)<a href="https://arxiv.org/pdf/1901.09002.pdf">[PDF]</a></p>
 												<p><strong>Jielin Qiu</strong>, Ge Huang, and Tai Sing Lee.<br>
 												Develope a hierarchical network model, neurally inspired and constrained, to understand how spatiotemporal memories might be learned and encoded in the visual hierarchy that can be used for predicting future episodic events.
-												We showed that this neurally inspired and constrained model achieve better prediction performance in real world videos and exhibited video familiarity or prediction suppression effects observed along the ventral stream of the primate visual system.</p>
+												Show that this neurally inspired and constrained model achieve better prediction performance in real world videos and exhibited video familiarity or prediction suppression effects observed along the ventral stream of the primate visual system.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/DCCA.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Multiview Emotion Recognition Using Deep Canonical Correlation Analysis</h4>
-												<p>Proc. of 25th International Conference on Neural Information Processing (<strong>ICONIP 2018 (oral)</strong>)<a href="https://drive.google.com/open?id=1Fcl1MRz3edqpOCu3EE1O9iHEozta2dFG">[Paper]</a></p>
+												<p>Proc. of 25th International Conference on Neural Information Processing (<strong>ICONIP 2018 (oral)</strong>)<a href="https://link.springer.com/chapter/10.1007/978-3-030-04221-9_20">[PDF]</a></p>
 												<p><strong>Jielin Qiu</strong>, Wei Liu, and Bao-Liang Lu.<br>
 												Use Deep Canonical Correlation Analysis model to calculate the correlation between two views' EEG and eye movement data.<br>
 												Use deep network to extract features with high correlations and acquire high emotion classification accuracy. </p>
@@ -144,8 +154,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/NER.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Sex Differences in Classification of Five Emotional States from EEG and Eye Movement Signals</h4>
-												<p>Proc. of 9th International IEEE EMBS Conference on Neural Engineering (<strong>NER 2019</strong>)<a href="https://drive.google.com/open?id=19WKZKJhd0u-N5CzGbw7mGI0JdHUmdhzd">[Paper]</a></p>
+												<h4>Investigating Sex Differences in Classification of Five Emotions from EEG and Eye Movement Signals</h4>
+												<p>Proc. of 9th International IEEE EMBS Conference on Neural Engineering (<strong>NER 2019</strong>)<a href="https://ieeexplore.ieee.org/abstract/document/8857476">[PDF]</a></p>
 												<p>Baolan Qing, <strong>Jielin Qiu</strong>, Hao Tang, Weilong Zheng, and Bao-Liang Lu.<br>
 												Propose five emotion dataset with EEG and eye movement data (<a href="http://bcmi.sjtu.edu.cn/home/seed/index.html ">Dataset</a>).
 												Investigate the differences between males and females in emotion recognition using DCCA and LSTM computational models, blink frequency, and blink duration.</p>
@@ -155,7 +165,7 @@
 											<a href="#" class="image"><img src="images/DQN.png" alt="" /></a>
 											<div class="inner">
 												<h4>Stochastic Variance Reduction for Deep Q-learning</h4>
-												<p>Proc. of of 31th AAAI Conference on Artificial Intelligence workshop (<strong>AAAI 2019</strong>)<a href="https://drive.google.com/open?id=1wsVhH3rQ7SvlPGr6mJ2ViovjRY0bjmjK">[Paper]</a></p>
+												<p>Proc. of of 31th AAAI Conference on Artificial Intelligence workshop (<strong>AAAI 2019</strong>)<a href="http://aaai-rlg.mlanctot.info/papers/AAAI19-RLG-Paper04.pdf">[PDF]</a></p>
 												<p>Wei-Ye Zhao, Yang Liu, Xiaoming Zhao, <strong>Jielin Qiu</strong>, and Jian Peng.<br>
 												Propose an innovative optimization algorithm for Q-learning which reduces the variance in gradient estimation.</p>
 											</div>
