--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<h3>Selected Publications</h3>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/NPN.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/TCDS.png" alt="" /></a>
 											<div class="inner">
 												<h4>Comparing Recognition Performance and Robustness of Multimodal Deep Learning Models for Multimodal Emotion Recognition</h4>
 												<p>Proc. of IEEE Transactions on Cognitive and Developmental Systems 2021<a href="https://ieeexplore.ieee.org/abstract/document/9395500">[PDF]</a></p>
