--- a/index.html
+++ b/index.html
@@ -180,6 +180,20 @@
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/LRL.png" alt="" /></a>
+											<div class="inner">
+												<h4>Language-assisted Deep RL</h4>
+												<p>Use language to assist agent learning in Deep RL. Connect language to control for multimodal learning.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/Boeing.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>On-ground Autonomous Driving for Aircraft</h4>
+												<p>Implement algorithms for the aircraft to achieve autonomous driving on the runway.</p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/acemap.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Acemap</h4>
