--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Jielin QIu 2021. All rights reserved.</li>
+								<li>&copy; Jielin Qiu 2021. All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
