--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 											<div class="inner">
 												<h4>Comparing Recognition Performance and Robustness of Multimodal Deep Learning Models for Multimodal Emotion Recognition</h4>
 												<p>Proc. of IEEE Transactions on Cognitive and Developmental Systems 2021<a href="https://ieeexplore.ieee.org/abstract/document/9395500">[PDF]</a></p>
-												<p><strong>Jielin Qiu</strong>, Ge Huang, and Tai Sing Lee.<br>
+												<p>Wei Liu, <strong>Jielin Qiu</strong>, Wei-Long Zheng, and Bao-Liang Lu.<br>
 												Propose two methods for extending the original DCCA model for multimodal fusion: weighted sum fusion and attention-based fusion.
 												Systemically compare the performance of DCCA, BDAE, and traditional approaches on five multimodal datasets.</p>
 											</div>
