--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<header>
 					<span class="image avatar"><img src="images/JielinQiu.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Jielin Qiu</a></h1>
-					<p>Graduate student <br />Computer Science Department, SCS <br />Carnegie Mellon University<br />
+					<p>PhD student <br />Computer Science Department, SCS <br />Carnegie Mellon University<br />
 					Pittsburgh, PA, USA <br />Email: jielinq@andrew.cmu.edu</p>
 				</header>
 				<nav id="nav">
@@ -57,7 +57,7 @@
 										<h3>About Me</h3>
 										</p>
 									</header>
-									<p>I am a PhD student at Computer Science Department at School of Computer Science, Carnegie Mellon University, advised by <a href="https://safeai-lab.github.io/index.html">Prof. Ding Zhao</a>. I also worked with <a href="https://www.cs.cmu.edu/~schneide/">Prof. Jeff Schneider</a>. I got my bachelor degree from Shanghai Jiao Tong University, advised by <a href="http://bcmi.sjtu.edu.cn/home/blu/">Prof. Baoliang Lu</a>. I also worked as a research assistant at Carnegie Mellon University, Computer Science Department, with <a href="http://www.cnbc.cmu.edu/~tai/">Prof. Tai-Sing Lee</a>. My research interests lie in Multimodal Machine Learning, Computer Vision, Robotics, Language Grounding, and Healthcare.</p>
+									<p>I am a PhD student at Computer Science Department at School of Computer Science, Carnegie Mellon University, advised by <a href="https://safeai-lab.github.io/index.html">Prof. Ding Zhao</a> and <a href="https://feifang.info/">Prof. Fei Fang</a>. I also worked with <a href="https://www.cs.cmu.edu/~schneide/">Prof. Jeff Schneider</a>. I got my bachelor degree from Shanghai Jiao Tong University, advised by <a href="http://bcmi.sjtu.edu.cn/home/blu/">Prof. Bao-Liang Lu</a>. I also worked as a research assistant at Carnegie Mellon University, Computer Science Department, with <a href="http://www.cnbc.cmu.edu/~tai/">Prof. Tai-Sing Lee</a>. My research interests lie in Multimodal Machine Learning, Computer Vision, Robotics, Language Grounding, and Healthcare.</p>
 								</div>
 							</section>
 
@@ -104,7 +104,7 @@
 											<a href="#" class="image"><img src="images/NPN.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex</h4>
-												<p>Proc. of thirty-third Conference on Neural Information Processing Systems (<strong>NIPS 2019</strong>)<a href="https://arxiv.org/pdf/1901.09002.pdf">[PDF]</a></p>
+												<p>Proc. of thirty-third Conference on Neural Information Processing Systems (<strong>NIPS 2019</strong>)<a href="https://proceedings.neurips.cc/paper/2019/file/08040837089cdf46631a10aca5258e16-Paper.pdf">[PDF]</a></p>
 												<p><strong>Jielin Qiu</strong>, Ge Huang, and Tai Sing Lee.<br>
 												Develope a hierarchical network model, neurally inspired and constrained, to understand how spatiotemporal memories might be learned and encoded in the visual hierarchy that can be used for predicting future episodic events.
 												Show that this neurally inspired and constrained model achieve better prediction performance in real world videos and exhibited video familiarity or prediction suppression effects observed along the ventral stream of the primate visual system.</p>
