--- a/index.html
+++ b/index.html
@@ -62,12 +62,16 @@
 							</section>
 
 						<!-- Two -->
-						<!--
+
 							<section id="two">
 								<div class="container">
 									<h3>News</h3>
 									<ul class="feature-icons">
-									    <p >Sep 9, 2019.  Our paper titled 'Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex' got acceptde by NIPS 2019.</p>									
+									    <p >Sep, 2021.  Receive a gift funding from Adobe. Thanks!</p>
+									    <p >May, 2021.  Start a research internship at Adobe research.</p>
+									    <p >Dec, 2020.  Our paper titled 'Comparing Recognition Performance and Robustness of Multimodal Deep Learning Models for Multimodal Emotion Recognition' got acceptde by  IEEE Transactions on Cognitive and Developmental Systems.</p>
+									    <p >Sep, 2019.  Our paper titled 'Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex' got acceptde by NIPS 2019.</p>									
+						<!--
 									    <p >July 7, 2019.  I graduated from Shanghai Jiao Tong University with my bachelor degree and honored as Shanghai Outstanding Graduate.</p>
 										<p >Dec 18, 2018.  I was invited to join the Program Committee of <a href="http://www.aiai2019.eu/">15th AIAI </a> and <a href="http://www.eann2019.eu/">20th EANN</a> joint conference in Greece, 2019.</p>
 										<p >Nov 29, 2018.  A paper titled “Adversarial and Cooperative Correlated Domain Adaptation based Multimodal Emotion Recognition” was accepted by <a href="https://aaai.org/Conferences/AAAI-18/">AAAI-2018</a>.</p>
@@ -80,10 +84,11 @@
 										<p >June 7, 2018.  I serve as a PC member for ICANN-2018.</p>
 										<p >May 31, 2018.  A paper titled “Data Encoding Visualization based Emotion Recognition with ACGAN Applied for Denosing” was accepted by <a href="https://www.ucalgary.ca/icci_cc/iccicc-18">ICCI*CC-2018</a> (oral).</p>
 										<p >Nov 3 - Nov 6, 2017. I attended the 24th International Conference on Neural Information Processing.</p>
+-->
 									</ul>
 								</div>
 							</section>
--->
+
 
 						<!-- Three -->
 							<section id="three">
