--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 								<div class="container">
 									<h3>News</h3>
 									<ul class="feature-icons">
-									    <p >Sep 2021.  Receive a gift funding from Adobe. Thanks!</p>
+									    <p >Sep 2021.  Receive a gift funding from Adobe. Thanks, Adobe!</p>
+										<p >Sep 2021.  Receive a research funding from Allegheny Health Network to support my research in healthcare.</p>
 									    <p >May 2021.  Start a research internship at Adobe research.</p>
 									    <p >Dec 2020.  Our paper titled 'Comparing Recognition Performance and Robustness of Multimodal Deep Learning Models for Multimodal Emotion Recognition' got acceptde by  IEEE Transactions on Cognitive and Developmental Systems 2020.</p>
 									    <p >Sep 2019.  Our paper titled 'Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex' got acceptde by NIPS 2019.</p>
