--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
 									<ul class="feature-icons">
 									    <p >Sep 2021.  Receive a gift funding from Adobe. Thanks, Adobe!</p>
 										<p >Sep 2021.  Receive a research funding from Allegheny Health Network to support my research in healthcare.</p>
+										<p >Aug 2021.  TA 16-824 Visual Learning and Recognition by <a href="https://www.cs.cmu.edu/~junyanz/">Prof. Jun-Yan Zhu</a>. Check our course here: <a href="https://visual-learning.cs.cmu.edu/index.html">16-824 Fall2021</a></p>
 									    <p >May 2021.  Start a research internship at Adobe research.</p>
 									    <p >Dec 2020.  Our paper titled 'Comparing Recognition Performance and Robustness of Multimodal Deep Learning Models for Multimodal Emotion Recognition' got acceptde by  IEEE Transactions on Cognitive and Developmental Systems 2020.</p>
 									    <p >Sep 2019.  Our paper titled 'Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex' got acceptde by NIPS 2019.</p>
-										<p >July 2018.  Start my internship at CMU. </p>
+										
 						<!--
 									    <p >July 7, 2019.  I graduated from Shanghai Jiao Tong University with my bachelor degree and honored as Shanghai Outstanding Graduate.</p>
 										<p >Dec 18, 2018.  I was invited to join the Program Committee of <a href="http://www.aiai2019.eu/">15th AIAI </a> and <a href="http://www.eann2019.eu/">20th EANN</a> joint conference in Greece, 2019.</p>
