--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 										<p >Sep 2021.  Receive a research funding from Allegheny Health Network to support my research in healthcare.</p>
 										<p >Aug 2021.  TA 16-824 Visual Learning and Recognition by <a href="https://www.cs.cmu.edu/~junyanz/">Prof. Jun-Yan Zhu</a>. Check our course here: <a href="https://visual-learning.cs.cmu.edu/index.html">16-824 Fall2021</a></p>
 									    <p >May 2021.  Start a research internship at Adobe research.</p>
+										<p >Jan 2021.  TA 11-777 MultiModal Machine Learning by <a href="https://yonatanbisk.com/index.html">Prof. Yonatan Bisk</a>. Check our course here: <a href="https://yonatanbisk.com/teaching/mmml-s21/">11-777 Spring2021</a></p>
 									    <p >Dec 2020.  Our paper titled 'Comparing Recognition Performance and Robustness of Multimodal Deep Learning Models for Multimodal Emotion Recognition' got acceptde by  IEEE Transactions on Cognitive and Developmental Systems 2020.</p>
 									    <p >Sep 2019.  Our paper titled 'Visual Sequence Learning  in Hierarchical Prediction Networks and Primate Visual Cortex' got acceptde by NIPS 2019.</p>
 										
