--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<h3>News</h3>
 									<ul class="feature-icons">
 									    <p >Sep 2021.  Receive a gift funding from Adobe. Thanks, Adobe!</p>
-										<p >Sep 2021.  Receive a research funding from Allegheny Health Network to support my research in healthcare.</p>
+										<p >Sep 2021.  Receive a research funding from Allegheny Health Network to support my research in healthcare. Thanks!</p>
 										<p >Aug 2021.  TA 16-824 Visual Learning and Recognition by <a href="https://www.cs.cmu.edu/~junyanz/">Prof. Jun-Yan Zhu</a>. Check our course here: <a href="https://visual-learning.cs.cmu.edu/index.html">16-824 Fall2021</a></p>
 									    <p >May 2021.  Start a research internship at Adobe research.</p>
 										<p >Jan 2021.  TA 11-777 MultiModal Machine Learning by <a href="https://yonatanbisk.com/index.html">Prof. Yonatan Bisk</a>. Check our course here: <a href="https://yonatanbisk.com/teaching/mmml-s21/">11-777 Spring2021</a></p>
